--- a/contactLensConsumer/package.json
+++ b/contactLensConsumer/package.json
@@ -1,9 +1,12 @@
 {
-  "name": "invoketelephonyintegrationapi",
+  "name": "contactLensConsumer",
   "version": "1.0.0",
   "description": "",
   "main": "handler.js",
   "license": "BSD-3-Clause",
+  "scripts": {
+    "test": "jest --collect-coverage --passWithNoTests"
+  },
   "dependencies": {
     "aws-sdk": "^2.573.0",
     "axios": "0.21.1",
@@ -22,7 +25,7 @@
   "jest": {
     "clearMocks": true,
     "modulePaths": [
-      "../layers/invokeTelephonyIntegrationApiFunctionLayer/nodejs/node_modules/"
+      "../layers/contactLensConsumerFunctionLayer/nodejs/node_modules/"
     ]
   }
 }
