--- a/kvsTranscriber/build.gradle
+++ b/kvsTranscriber/build.gradle
@@ -50,21 +50,22 @@ dependencies {
     compile group: 'org.bouncycastle', name: 'bcprov-jdk15on', version: '1.64'
     compile group: 'io.jsonwebtoken', name: 'jjwt', version: '0.9.1'
     compile group: 'com.amazonaws', name: 'aws-java-sdk-ssm', version: '1.11.728'
-    compile group: 'software.amazon.awssdk', name: 'transcribestreaming', version: '2.15.40'
+    compile group: 'software.amazon.awssdk', name: 'transcribestreaming', version: '2.17.4'
     compile group: 'com.amazonaws', name: 'aws-java-sdk-kinesisvideo', version: '1.11.475'
     compile group: 'com.amazonaws', name: 'aws-lambda-java-core', version: '1.2.0'
     compile group: 'com.amazonaws', name: 'aws-lambda-java-events', version: '2.2.7'
     compile group: 'com.amazonaws', name: 'amazon-kinesis-video-streams-parser-library', version: '1.0.8'
     compile group: 'org.apache.commons', name: 'commons-lang3', version: '3.6'
     compile group: 'software.amazon.awssdk', name: 'netty-nio-client', version: '2.2.0'
-    compile group: 'org.slf4j', name: 'slf4j-log4j12', version: '1.7.24'
-    compile group: 'org.slf4j', name: 'slf4j-api', version: '1.7.24'
+    compile group: 'org.apache.logging.log4j', name: 'log4j-api', version: '2.17.1'
+    compile group: 'org.apache.logging.log4j', name: 'log4j-core', version: '2.17.1'
+    compile group: 'org.apache.logging.log4j', name: 'log4j-slf4j-impl', version: '2.17.1'
     compile group: 'org.json', name: 'json', version: '20180813'
     compile group: 'software.amazon.awssdk', name: 'auth', version: '2.8.7'
     compile group: 'software.amazon.awssdk', name: 'sdk-core', version: '2.7.11'
     compile group: 'com.google.code.gson', name: 'gson', version: '2.8.0'
     compile group: 'com.googlecode.json-simple', name: 'json-simple', version: '1.1'
-    compile group: 'software.amazon.awssdk', name: 'connect', version: '2.13.39'
+    compile group: 'software.amazon.awssdk', name: 'connect', version: '2.17.4'
     testImplementation 'com.github.stefanbirkner:system-lambda:1.1.0'
     testImplementation 'com.github.stefanbirkner:system-rules:1.19.0'
     testImplementation 'org.mockito:mockito-inline:3.4.0'
