--- a/authKeysSSMUtil/package.json
+++ b/authKeysSSMUtil/package.json
@@ -6,11 +6,10 @@
   "license" : "BSD-3-Clause",
   "dependencies": {
     "aws-param-store": "^3.2.0",
-    "cfn-response": "^1.0.1",
-    "selfsigned": "^1.10.7"
+    "selfsigned": "2.0.1"
   },
   "devDependencies": {
-    "jest": "^24.9.0",
+    "jest": "28.1.0",
     "aws-sdk": "^2.573.0"
   },
   "scripts": {
