--- a/contactLensConsumer/package.json
+++ b/contactLensConsumer/package.json
@@ -1,14 +1,16 @@
 {
-  "name": "invokesfrestapi",
+  "name": "contactLensConsumer",
   "version": "1.0.0",
   "description": "",
   "main": "handler.js",
-  "license" : "BSD-3-Clause",
+  "license": "BSD-3-Clause",
+  "scripts": {
+    "test": "jest --collect-coverage"
+  },
   "dependencies": {
     "aws-sdk": "^2.573.0",
     "axios": "0.27.2",
     "axios-logger": "2.5.0",
-    "flat": "^5.0.2",
     "jsonwebtoken": "^8.5.1",
     "uuid": "^3.4.0"
   },
@@ -17,11 +19,10 @@
     "jest": "28.1.0",
     "rewire": "^4.0.1"
   },
-  "scripts": {
-    "test": "jest --collect-coverage"
-  },
   "jest": {
     "clearMocks": true,
-    "modulePaths": ["../layers/invokeSalesforceRestApiFunctionLayer/nodejs/node_modules/"]
+    "modulePaths": [
+      "../layers/contactLensConsumerFunctionLayer/nodejs/node_modules/"
+    ]
   }
 }
