--- a/handleContactEvents/package.json
+++ b/handleContactEvents/package.json
@@ -11,7 +11,7 @@
     "test": "jest --collect-coverage"
   },
   "devDependencies": {
-    "jest": "^24.9.0"
+    "jest": "28.1.0"
   },
   "jest": {
     "clearMocks": true,
