--- a/invokeTelephonyIntegrationApi/package.json
+++ b/invokeTelephonyIntegrationApi/package.json
@@ -3,17 +3,17 @@
   "version": "1.0.0",
   "description": "",
   "main": "handler.js",
-  "license" : "BSD-3-Clause",
+  "license": "BSD-3-Clause",
   "dependencies": {
     "aws-sdk": "^2.573.0",
-    "axios": "0.21.1",
+    "axios": "0.27.2",
     "axios-logger": "2.5.0",
     "jsonwebtoken": "^8.5.1",
     "uuid": "^3.4.0"
   },
   "devDependencies": {
     "dotenv": "^8.2.0",
-    "jest": "^24.9.0",
+    "jest": "28.1.0",
     "rewire": "^4.0.1"
   },
   "scripts": {
@@ -21,6 +21,8 @@
   },
   "jest": {
     "clearMocks": true,
-    "modulePaths": ["../layers/invokeTelephonyIntegrationApiFunctionLayer/nodejs/node_modules/"]
+    "modulePaths": [
+      "../layers/invokeTelephonyIntegrationApiFunctionLayer/nodejs/node_modules/"
+    ]
   }
 }
