--- a/kvsConsumerTrigger/package.json
+++ b/kvsConsumerTrigger/package.json
@@ -8,7 +8,7 @@
     "aws-sdk": "^2.573.0"
   },
   "devDependencies": {
-    "jest": "^24.9.0"
+    "jest": "28.1.0"
   },
   "scripts": {
     "test": "jest --collect-coverage"
