--- a/authKeysSSMUtil/package.json
+++ b/authKeysSSMUtil/package.json
@@ -5,12 +5,12 @@
   "main": "index.js",
   "license" : "BSD-3-Clause",
   "dependencies": {
-    "aws-param-store": "^3.2.0",
+    "aws-param-store": "3.2.0",
     "selfsigned": "2.0.1"
   },
   "devDependencies": {
     "jest": "28.1.0",
-    "aws-sdk": "^2.573.0"
+    "aws-sdk": "2.814.0"
   },
   "scripts": {
     "test": "jest --collect-coverage"
