--- a/contactLensConsumer/package.json
+++ b/contactLensConsumer/package.json
@@ -8,16 +8,16 @@
     "test": "jest --collect-coverage"
   },
   "dependencies": {
-    "aws-sdk": "^2.573.0",
+    "aws-sdk": "2.814.0",
     "axios": "0.27.2",
     "axios-logger": "2.5.0",
-    "jsonwebtoken": "^8.5.1",
-    "uuid": "^3.4.0"
+    "jsonwebtoken": "8.5.1",
+    "uuid": "3.4.0"
   },
   "devDependencies": {
-    "dotenv": "^8.2.0",
+    "dotenv": "8.2.0",
     "jest": "28.1.0",
-    "rewire": "^4.0.1"
+    "rewire": "4.0.1"
   },
   "jest": {
     "clearMocks": true,
