--- a/handleContactEvents/package.json
+++ b/handleContactEvents/package.json
@@ -5,7 +5,7 @@
   "main": "handler.js",
   "license" : "BSD-3-Clause",
   "dependencies": {
-    "aws-sdk": "^2.573.0"
+    "aws-sdk": "2.814.0"
   },
   "scripts": {
     "test": "jest --collect-coverage"
