--- a/voiceMailPackaging/package.json
+++ b/voiceMailPackaging/package.json
@@ -1,23 +1,21 @@
 {
-  "name": "realtimeAlert",
+  "name": "voiceMailPackaging",
   "version": "1.0.0",
   "description": "",
   "main": "handler.js",
-  "license": "BSD-3-Clause",
+  "license" : "BSD-3-Clause",
   "dependencies": {
     "aws-sdk": "2.814.0",
     "winston": "3.2.1"
   },
-  "devDependencies": {
-    "jest": "28.1.0"
-  },
   "scripts": {
     "test": "jest --collect-coverage"
   },
+  "devDependencies": {
+    "jest": "28.1.0"
+  },
   "jest": {
     "clearMocks": true,
-    "modulePaths": [
-      "../layers/realtimeAlertFunctionLayer/nodejs/node_modules/"
-    ]
+    "modulePaths": ["../layers/voiceMailPackagingFunctionLayer/nodejs/node_modules/"]
   }
 }
