--- a/invokeSfRestApi/package.json
+++ b/invokeSfRestApi/package.json
@@ -6,6 +6,7 @@
   "license" : "BSD-3-Clause",
   "dependencies": {
     "aws-sdk": "2.814.0",
+    "winston": "3.2.1",
     "axios": "0.27.2",
     "axios-logger": "2.5.0",
     "flat": "5.0.2",
