--- a/invokeTelephonyIntegrationApi/package.json
+++ b/invokeTelephonyIntegrationApi/package.json
@@ -5,16 +5,17 @@
   "main": "handler.js",
   "license": "BSD-3-Clause",
   "dependencies": {
-    "aws-sdk": "^2.814.0",
+    "aws-sdk": "2.814.0",
+    "winston": "3.2.1",
     "axios": "0.27.2",
     "axios-logger": "2.5.0",
-    "jsonwebtoken": "^8.5.1",
-    "uuid": "^3.4.0"
+    "jsonwebtoken": "8.5.1",
+    "uuid": "3.4.0"
   },
   "devDependencies": {
-    "dotenv": "^8.2.0",
+    "dotenv": "8.2.0",
     "jest": "28.1.0",
-    "rewire": "^4.0.1"
+    "rewire": "4.0.1"
   },
   "scripts": {
     "test": "jest --collect-coverage"
