--- a/layers/invokeTelephonyIntegrationApiFunctionLayer/nodejs/package.json
+++ b/layers/invokeTelephonyIntegrationApiFunctionLayer/nodejs/package.json
@@ -5,6 +5,7 @@
   "main": "",
   "dependencies": {
     "aws-sdk": "2.814.0",
+    "winston": "3.2.1",
     "axios": "0.27.2",
     "axios-logger": "2.5.0",
     "jsonwebtoken": "8.5.1",
