--- a/voiceMailAudioProcessing/package.json
+++ b/voiceMailAudioProcessing/package.json
@@ -1,12 +1,14 @@
 {
-  "name": "handleContactEvents",
+  "name": "voiceMailAudioProcessing",
   "version": "1.0.0",
   "description": "",
   "main": "handler.js",
   "license" : "BSD-3-Clause",
   "dependencies": {
     "aws-sdk": "2.814.0",
-    "winston": "3.2.1"
+    "winston": "3.2.1",
+    "wav": "1.0.2",
+    "ebml": "3.0.0"
   },
   "scripts": {
     "test": "jest --collect-coverage"
@@ -16,6 +18,6 @@
   },
   "jest": {
     "clearMocks": true,
-    "modulePaths": ["../layers/handleContactEventsFunctionLayer/nodejs/node_modules/"]
+    "modulePaths": ["../layers/voiceMailAudioProcessingFunctionLayer/nodejs/node_modules/"]
   }
 }
