--- a/postCallAnalysisTrigger/package.json
+++ b/postCallAnalysisTrigger/package.json
@@ -1,28 +1,26 @@
 {
-  "name": "invokesfrestapi",
+  "name": "postCallAnalysisTrigger",
   "version": "1.0.0",
   "description": "",
   "main": "handler.js",
   "license" : "BSD-3-Clause",
   "dependencies": {
-    "aws-sdk": "2.814.0",
+    "aws-sdk": "2.1044.0",
     "winston": "3.2.1",
     "axios": "0.27.2",
     "axios-logger": "2.5.0",
-    "flat": "5.0.2",
+    "axios-retry": "3.3.1",
     "jsonwebtoken": "9.0.0",
     "uuid": "3.4.0"
-  },
-  "devDependencies": {
-    "dotenv": "8.2.0",
-    "jest": "28.1.0",
-    "rewire": "4.0.1"
   },
   "scripts": {
     "test": "jest --collect-coverage"
   },
+  "devDependencies": {
+    "jest": "28.1.0"
+  },
   "jest": {
     "clearMocks": true,
-    "modulePaths": ["../layers/invokeSalesforceRestApiFunctionLayer/nodejs/node_modules/"]
+    "modulePaths": ["../layers/postCallAnalysisTriggerFunctionLayer/nodejs/node_modules/"]
   }
 }
