--- a/ServerlessApplication/ServiceCloudVoiceLambdas.yaml
+++ b/ServerlessApplication/ServiceCloudVoiceLambdas.yaml
@@ -424,7 +424,7 @@ Resources:
       Timeout: 30
       Environment:
         Variables:
-          INVOKE_KVS_TRANSCRIBER_ARN: !GetAtt kvsTranscriber.Arn
+          transcriptionFunction: !GetAtt kvsTranscriber.Arn
           LOG_LEVEL: "info"
       Layers:
         - Ref: kvsConsumerTriggerFunctionLayer
@@ -604,6 +604,58 @@ Resources:
     Type: AWS::Kinesis::Stream
     Properties:
       ShardCount: 1
+      
+  ContactLensProcessorFunctionLayer:
+    Type: AWS::Serverless::LayerVersion
+    Properties:
+      LayerName: ContactLensProcessorFunctionLayer
+      Description: ContactLensProcessorFunctionLayer node modules
+      ContentUri: layers/contactLensProcessorFunctionLayer/nodejs/
+      CompatibleRuntimes:
+        - nodejs14.x
+      LicenseInfo: ../LICENSE.md
+      RetentionPolicy: Retain
+    Metadata:
+      BuildMethod: nodejs14.x
+
+  ContactLensProcessorFunction:
+    Type: AWS::Serverless::Function
+    Properties:
+      CodeUri: contactLensProcessor/
+      Handler: handler.handler
+      Runtime: nodejs14.x
+      AutoPublishAlias: active
+      Timeout: 180
+      Environment:
+        Variables:
+          PRIVATE_KEY_PARAM_NAME: !Sub "${CallCenterApiName}-scrt-jwt-auth-private-key"
+          SALESFORCE_ORG_ID: !Sub "${SalesforceOrgId}"
+          SCRT_ENDPOINT_BASE: !Sub "${ScrtEndpointUrl}"
+          CALL_CENTER_API_NAME: !Sub "${CallCenterApiName}"
+          USE_SSM_LAMBDA_EXTENSION: false
+          SSM_PARAMETER_STORE_TTL: 60
+      Policies:
+        - Statement:
+            - Effect: Allow
+              Action:
+                - "kinesis:DescribeStream"
+                - "kinesis:DescribeStreamSummary"
+                - "kinesis:GetRecords"
+                - "kinesis:GetShardIterator"
+                - "kinesis:ListShards"
+                - "kinesis:ListStreams"
+                - "kinesis:SubscribeToShard"
+                - "logs:CreateLogGroup"
+                - "logs:CreateLogStream"
+                - "logs:PutLogEvents"
+                - "lambda:InvokeFunction"
+                - "ssm:Describe*"
+                - "ssm:Get*"
+                - "ssm:List*"
+              Resource:
+                - '*'
+      Layers:
+        - Ref: ContactLensProcessorFunctionLayer
 
   ContactLensConsumerFunctionLayer:
     Type: AWS::Serverless::LayerVersion
@@ -625,12 +677,11 @@ Resources:
       Handler: handler.handler
       Runtime: nodejs14.x
       AutoPublishAlias: active
+      Timeout: 60
+      MemorySize: 256
       Environment:
         Variables:
-          PRIVATE_KEY_PARAM_NAME: !Sub "${CallCenterApiName}-scrt-jwt-auth-private-key"
-          SALESFORCE_ORG_ID: !Sub "${SalesforceOrgId}"
-          SCRT_ENDPOINT_BASE: !Sub "${ScrtEndpointUrl}"
-          CALL_CENTER_API_NAME: !Sub "${CallCenterApiName}"
+          CONTACT_LENS_PROCESSOR_FUNCTION_ARN: !Ref ContactLensProcessorFunction.Alias
           LOG_LEVEL: "info"
       Policies:
         - Statement:
@@ -658,9 +709,10 @@ Resources:
   ContactLensConsumerFunctionStream:
     Type: AWS::Lambda::EventSourceMapping
     Properties:
-      ParallelizationFactor: 10
-      BatchSize: 1
+      ParallelizationFactor: 4
+      BatchSize: 5
       MaximumBatchingWindowInSeconds: 1
+      MaximumRecordAgeInSeconds: 180
       FunctionName:
         Ref: ContactLensConsumerFunction
       EventSourceArn:
@@ -669,7 +721,7 @@ Resources:
           - Arn
       StartingPosition: TRIM_HORIZON
       BisectBatchOnFunctionError: true
-      MaximumRetryAttempts: 1
+      MaximumRetryAttempts: 0
 
   ContactEventsRule:
     Type: 'AWS::Events::Rule'
@@ -1440,6 +1492,9 @@ Outputs:
   ContactLensConsumerFunctionIamRole:
     Description: "Implicit IAM Role created for ContactLensConsumerFunction"
     Value: !GetAtt ContactLensConsumerFunctionRole.Arn
+  ContactLensProcessorFunction:
+    Description: ContactLensProcessorFunction Lambda Function ARN
+    Value: !GetAtt ContactLensProcessorFunction.Arn
 
 
 Metadata:
@@ -1452,4 +1507,4 @@ Metadata:
     ReadmeUrl: ../APP_README.md
     HomePageUrl: https://www.salesforce.com/products/service-cloud/solutions/call-center-management
     SourceCodeUrl: https://github.com/service-cloud-voice/ServiceCloudVoiceLambdas
-    SemanticVersion: 11.0.0
+    SemanticVersion: 11.0.1
