--- a/kvsTranscriber/build.gradle
+++ b/kvsTranscriber/build.gradle
@@ -35,8 +35,8 @@ repositories {
 }
 
 java {
-    sourceCompatibility = JavaVersion.VERSION_1_8
-    targetCompatibility = JavaVersion.VERSION_1_8
+    sourceCompatibility = JavaVersion.VERSION_17
+    targetCompatibility = JavaVersion.VERSION_17
 }
 
 test {
@@ -68,7 +68,7 @@ dependencies {
     implementation group: 'software.amazon.awssdk', name: 'connect', version: '2.17.4'
     testImplementation 'com.github.stefanbirkner:system-lambda:1.1.0'
     testImplementation 'com.github.stefanbirkner:system-rules:1.19.0'
-    testImplementation 'org.mockito:mockito-inline:3.4.0'
+    testImplementation 'org.mockito:mockito-inline:5.2.0'
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.3.1'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.3.1'
 }
