--- a/invokeTelephonyIntegrationApi/package.json
+++ b/invokeTelephonyIntegrationApi/package.json
@@ -5,7 +5,7 @@
   "main": "handler.js",
   "license": "BSD-3-Clause",
   "dependencies": {
-    "aws-sdk": "2.814.0",
+    "aws-sdk": "2.1354.0",
     "winston": "3.2.1",
     "axios": "0.27.2",
     "axios-logger": "2.5.0",
@@ -15,7 +15,8 @@
   "devDependencies": {
     "dotenv": "8.2.0",
     "jest": "28.1.0",
-    "rewire": "4.0.1"
+    "rewire": "4.0.1",
+    "selfsigned": "2.0.1"
   },
   "scripts": {
     "test": "jest --collect-coverage"
