--- a/contactLensProcessor/package.json
+++ b/contactLensProcessor/package.json
@@ -18,7 +18,8 @@
   "devDependencies": {
     "dotenv": "8.2.0",
     "jest": "28.1.0",
-    "rewire": "4.0.1"
+    "rewire": "4.0.1",
+    "selfsigned": "2.0.1"
   },
   "jest": {
     "clearMocks": true,
