--- a/invokeTelephonyIntegrationApi/package.json
+++ b/invokeTelephonyIntegrationApi/package.json
@@ -15,7 +15,8 @@
   "devDependencies": {
     "dotenv": "8.2.0",
     "jest": "28.1.0",
-    "rewire": "4.0.1"
+    "rewire": "4.0.1",
+    "selfsigned": "2.0.1"
   },
   "scripts": {
     "test": "jest --collect-coverage"
